# cv_hw_2

./: .gitignore  main.ipynb  pyproject.toml
lib/: clients.py  config.py  dto.py  modules.py
