[tool.poetry]
name = "cv-hw-2"
version = "0.1.0"
description = ""
authors = ["Mike Chumakov <mdchumakov@avito.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.2"
plotly = "^5.24.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
numpy = "^2.1.2"
loguru = "^0.7.2"
tensorboard = "^2.18.0"
matplotlib = "^3.9.2"
kaleido = "0.2.1"
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
